--- a/.phraseapp.yml
+++ b/.phraseapp.yml
@@ -7,7 +7,8 @@ phraseapp:
     sources:
       - file: "./Backend/en.json"
       - file: "./Backend/ru.json"
-
+      params:
+        locale_id: a4f63c03384462a17f41e4a5e04ed9e4
 
   pull:
     targets:
